<resources>
    <string name="app_name">Tabungin</string>
    <string name="title_home">Home</string>
    <string name="title_savings">Saving</string>
    <string name="title_settings">Settings</string>
    <string name="title_profile">Profile</string>
    <string name="add_button_description">Add new item</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo">Logo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="continue_google">Continue with Google</string>
    <string name="continue_apple">Continue with Apple</string>
    <string name="back">Back</string>
    <string name="create_account">Create Account</string>
    <string name="email">Email</string>
    <string name="password_updated">Password Updated!!</string>
    <string name="password_updated_desc">Your password has been setup successfully</string>
    <string name="back_to_login">BACK TO LOGIN</string>
    <string name="create_password">Create Your New Password</string>
    <string name="create_password_desc">Your new password must be different from previous password.</string>
    <string name="reset_password">Reset Password</string>
    <string name="add">Add</string>
    <string name="fab">fab</string>
    <string name="profile_picture">profile_picture</string>
    <string name="remind">Remind</string>
    <string name="budget">Budget</string>
    <string name="latest_entries">Latest Entries</string>
    <string name="entry_icon">entry_icon</string>
    <string name="total_expenses">Total Expenses</string>
    <string name="previous_month">Previous Month</string>
    <string name="next_month">Next Month</string>
    <string name="news">News</string>
    <string name="placeholder">Placeholder</string>
    <string name="transaction">Transaction</string>
    <string name="your_balance">Your Balance</string>
    <string name="transaction_history">Transaction History</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="amount">Amount</string>
    <string name="category">Category</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="register_here">Register Here</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="tema">Tema</string>
    <string name="language">Language</string>
    <string name="images">user</string>
    <string name="images_name">username</string>
    <string name="notification">Notification</string>
    <string name="logout">Logout</string>
    <string name="help">Help</string>
    <string name="save">save</string>
    <string name="transaction_title">Transaction Title</string>
    <string name="transaction_date">Transaction Date</string>
    <string name="transaction_amount">Amount</string>
    <string name="total_balance">200.000</string>
    <string name="income">Income</string>
    <string name="total_income">100</string>
    <string name="outcome">Outcome</string>
    <string name="saving">Saving</string>
    <string name="total_saving">2.575</string>
    <string name="total_outcome">152</string>
    <string name="category_name">Category Name</string>
    <string name="category_icon">Category Icon</string>
    <string name="title_goals">Goals</string>
    <string name="add_goals">Add Goals</string>
    <string name="data">Data</string>
    <string name="icon_back">Icon Back</string>
    <string name="deadline">Deadline</string>
    <string name="username_min_length">Username must be at least 3 characters</string>
    <string name="invalid_email_format">Invalid email format</string>
    <string name="password_min_length">Password must be at least 8 characters</string>
    <string name="account_created_successfully">Account Created!!</string>
    <string name="signup_error">Signup Error!</string>
    <string name="age">Age</string>
    <string name="edit_goals">Edit Goals</string>
    <string name="report">Report</string>
    <string name="monthly_report">Monthly Report</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="card_profile">Profile</string>
    <string name="my_account">My Account</string>
    <string name="delete_account">Delete Account</string>
    <string name="saving_recommendation">Saving Recommendation</string>
    <string name="language_settings">Language Settings</string>
    <string name="cashout">Cashout</string>
    <string name="confirm_language_change">Confirm Language Change</string>
    <string name="confirm_language_english">Are you sure you want to change the language to English?</string>
    <string name="confirm_language_indonesian">Are you sure you want to change the language to Indonesian?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
</resources>