<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/transactionFragment"
        android:icon="@drawable/ic_note"
        android:title="@string/transaction" />

    <item
        android:id="@+id/placeholder"
        android:title=""/>

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_settings" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/title_profile" />
</menu>
