<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.ones.ui.home.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/transactionFragment"
        android:name="com.example.ones.ui.transaction.fragments.TransactionFragment"
        android:label="@string/transaction"
        tools:layout="@layout/fragment_transaction">
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.ones.ui.settings.fragments.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.ones.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile">
    </fragment>

    <fragment
        android:id="@+id/editProfileFragment"
        android:name="com.example.ones.ui.profile.EditProfileFragment"
        tools:layout="@layout/fragment_edit_profile" />

    <fragment
        android:id="@+id/addTransactionFragment"
        android:name="com.example.ones.ui.transaction.fragments.AddTransactionFragment"
        android:label="@string/add_transaction"
        tools:layout="@layout/fragment_add_transaction">
        <action
            android:id="@+id/action_addTransactionFragment_to_transactionOutcomeFragment"
            app:destination="@id/transactionOutcomeFragment" />
        <action
            android:id="@+id/action_addTransactionFragment_to_transactionIncomeFragment"
            app:destination="@id/transactionIncomeFragment" />
        <action
            android:id="@+id/action_addTransactionFragment_to_transactionSavingsFragment"
            app:destination="@id/transactionSavingsFragment" />
        <action
            android:id="@+id/action_transactionIncomeFragment_to_transactionFragment"
            app:destination="@id/transactionFragment" />
    </fragment>

    <fragment
        android:id="@+id/transactionIncomeFragment"
        android:name="com.example.ones.ui.transaction.fragments.TransactionIncomeFragment"
        android:label="Transaction Income"
        tools:layout="@layout/fragment_transaction_income">
        <action
            android:id="@+id/action_transactionIncomeFragment_to_transactionFragment"
            app:destination="@id/transactionFragment" />
    </fragment>

    <fragment
        android:id="@+id/transactionOutcomeFragment"
        android:name="com.example.ones.ui.transaction.fragments.TransactionOutcomeFragment"
        android:label="Transaction Outcome"
        tools:layout="@layout/fragment_transaction_outcome">
        <action
            android:id="@+id/action_transactionOutcomeFragment_to_transactionFragment"
            app:destination="@id/transactionFragment" />
    </fragment>

    <fragment
        android:id="@+id/transactionSavingsFragment"
        android:name="com.example.ones.ui.transaction.fragments.TransactionSavingsFragment"
        android:label="Transaction Savings"
        tools:layout="@layout/fragment_transaction_savings">
        <action
            android:id="@+id/action_transactionSavingsFragment_to_transactionFragment"
            app:destination="@id/transactionFragment" />
    </fragment>
</navigation>
